Second blog post!

--- a/docs/blog/authors.yml
+++ b/docs/blog/authors.yml
@@ -3,3 +3,8 @@ kevin:
   title: Conduit for AI Souls
   url: https://github.com/kafischer
   image_url: https://github.com/kafischer.png
+jerrell:
+  name: Jerrell Taylor
+  title: Co-founder & CPO, Open Souls
+  url: https://twitter.com/duh_jerrell
+  image_url: https://pbs.twimg.com/profile_images/1532473051798917120/c-eQ0aSq_400x400.jpg
