--- a/docs/package.json
+++ b/docs/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/core": "2.4.1",
     "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
+    "@vercel/analytics": "^1.0.1",
     "abort-controller": "^3.0.0",
     "clsx": "^1.2.1",
     "common-tags": "^1.8.2",
