--- a/docs/package.json
+++ b/docs/package.json
@@ -21,14 +21,23 @@
     "@mdx-js/react": "^1.6.22",
     "@vercel/analytics": "^1.0.1",
     "abort-controller": "^3.0.0",
+    "browserify-zlib": "^0.2.0",
     "clsx": "^1.2.1",
     "common-tags": "^1.8.2",
+    "crypto-browserify": "^3.12.0",
+    "docusaurus-plugin-webpack-crypto": "file:plugins/docusaurus-plugin-webpack-crypto",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-ace": "^10.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
-    "socialagi": "^0.0.32"
+    "socialagi": "^0.0.34-3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.3",
