--- a/docs/blog/authors.yml
+++ b/docs/blog/authors.yml
@@ -5,6 +5,6 @@ kevin:
   image_url: https://github.com/kafischer.png
 jerrell:
   name: Jerrell Taylor
-  title: Co-founder & COO, Open Souls
+  title: Co-founder & CPO, Open Souls
   url: https://twitter.com/duh_jerrell
   image_url: https://pbs.twimg.com/profile_images/1532473051798917120/c-eQ0aSq_400x400.jpg
