--- a/docs/package.json
+++ b/docs/package.json
@@ -19,7 +19,7 @@
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/preset-classic": "^2.4.3",
     "@mdx-js/react": "^1.6.22",
-    "@socialagi/memory": "^0.0.3-0",
+    "@socialagi/memory": "^0.0.3",
     "@vercel/analytics": "^1.0.1",
     "abort-controller": "^3.0.0",
     "browserify-zlib": "^0.2.0",
@@ -27,6 +27,7 @@
     "common-tags": "^1.8.2",
     "crypto-browserify": "^3.12.0",
     "docusaurus-plugin-webpack-crypto": "file:plugins/docusaurus-plugin-webpack-crypto",
+    "docusaurus-webpack": "file:plugins/docusaurus-webpack",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
