--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@
 # OpenAI API Key
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Add other environment variables as needed
+# Add other environment variables as needed!
